docs/v1.1.1/parallax-client/getting-started/installing-client.mdx
---
title: 'Installing the Parallax Client'
---

There are several ways to install the Parallax client, including via a package manager, downloading a pre-built bundle, running as a docker container or building from downloaded source code. On this page the various installation options are explained for several major operating systems. Users prioritizing ease of installation should choose to use a package manager or prebuilt bundle. Users prioritizing customization should build from source. It is important to run the latest version of the Parallax client because each release includes bug fixes and improvements over the previous versions. The stable releases are recommended for most users because they have been fully tested. A list of stable releases can be found [here](https://github.com/ParallaxProtocol/parallax/releases). Instructions for updating existing Parallax installations are also provided in each section.

## Package managers

Not yet available in package managers.

## Standalone bundle

Stable releases and development builds are provided as standalone bundles. These are useful for users who: a) wish to install a specific version of the Parallax client (e.g., for reproducible environments); b) wish to install on machines without internet access (e.g. air-gapped computers); or c) wish to avoid automatic updates and instead prefer to manually install software.

The following standalone bundles are available:

* 32bit, 64bit, ARMv5, ARMv6, ARMv7 and ARM64 archives (.tar.gz) on Linux
* 64bit archives (.tar.gz) on macOS
* 32bit and 64bit archives (.zip) and installers (.exe) on Windows

Some archives contain only the Parallax client, while other archives containing the Parallax client and the various developer tools (clef, devp2p, abigen, bootnode, evm and rlpdump).

The standalone bundles can be downloaded from the [Parallax client Releases](https://github.com/ParallaxProtocol/parallax/releases) page. To update an existing installation, download and manually install the latest version.

## Docker container

Not yet available in Docker Hub.

## Build from source code

### Linux and Mac

The [Parallax client repository](https://github.com/ParallaxProtocol/parallax) should be cloned locally. Then, the command `make prlx` configures everything for a temporary build and cleans up afterwards. This method of building only works on UNIX-like operating systems, and a Go installation is still required.

```sh
git clone https://github.com/ParallaxProtocol/parallax.git
cd parallax
make prlx
```

These commands create a Prlx executable file in the `parallax/build/bin` folder that can be moved and run from another directory if required. The binary is standalone and doesn't require any additional files.

To update an existing Parallax client installation simply stop the node, navigate to the project root directory and pull the latest version from the Parallax GitHub repository. Then rebuild and restart the node.

```sh
cd parallax
git pull
make prlx
```

### Windows

The Chocolatey package manager provides an easy way to install the required build tools. Chocolatey can be installed by following these [instructions](https://chocolatey.org/). Then, to install the build tool the following commands can be run in an Administrator command prompt:

```sh
C:\Windows\system32> choco install git
C:\Windows\system32> choco install golang
C:\Windows\system32> choco install mingw
```

Installing these packages sets up the path environment variables. To get the new path a new command prompt must be opened. To install the Parallax client, a Go workspace directory must first be created, then the Parallax source code can be created and built.

```sh
C:\Users\xxx> mkdir src\github.com\ParallaxProtocol
C:\Users\xxx> git clone https://github.com/ParallaxProtocol/parallax src\github.com\ParallaxProtocol\parallax
C:\Users\xxx> cd src\github.com\ParallaxProtocol\parallax
C:\Users\xxx\src\github.com\ParallaxProtocol\parallax> go get -u -v golang.org/x/net/context
C:\Users\xxx\src\github.com\ParallaxProtocol\parallax> go install -v ./cmd/...
```

### FreeBSD

To build the Parallax client from source code on FreeBSD, the Parallax GitHub repository can be cloned into a local directory.

```sh
git clone https://github.com/ParallaxProtocol/parallax
```

Then, the Go compiler can be used to build the Parallax client:

```sh
pkg install go
```

If the Go version currently installed is >= 1.5, the Parallax client can be built using the following command:

```sh
cd parallax
make prlx
```

If the installed Go version is < 1.5 (quarterly packages, for example), the following command can be used instead:

```sh
cd parallax
CC=clang make prlx
```

To start the node, the following command can be run:

```sh
build/bin/prlx
```

Additionally all the developer tools provided with Prlx (clef, devp2p, abigen, bootnode, evm and rlpdump) can be compiled by running `make all`.

To build a stable release, e.g. v1.0.0, the command `git checkout v1.0.0` retrieves that specific version. Executing that command before running `make prlx` switches the Parallax client to a stable branch.
